# cnc-ctrl

./: .gitignore  CRUSH.md  Cargo.toml  Cross.toml  README.md  jog.py  justfile  probe.py
docs/: example-config.yml  job_config.yml
reference/: interpolate.py  plot.py  probe.py  visualize.py
scripts/: concentric.py  gcodeOffseter.py  probe.py  requirements.txt
src/: command.rs  config.rs  connection.rs  controller.rs  machine.rs  main.rs  message.rs  steps.rs  task.rs
src/connection/: command.rs  message.rs
src/controller/: message.rs  serial.rs
src/steps/: bash.rs  gcode.rs
